[gd_scene load_steps=16 format=3 uid="uid://b67eht0dpiu58"]

[ext_resource type="Texture2D" uid="uid://dby8c1odm6wb" path="res://feature/flying_platform/sprite/On (32x10).png" id="1_1wclm"]
[ext_resource type="Texture2D" uid="uid://w7mllcca3m0m" path="res://feature/flying_platform/sprite/Off.png" id="1_7oa5p"]
[ext_resource type="Script" path="res://feature/flying_platform/flying_platform.gd" id="1_n2o6d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m3nnr"]
atlas = ExtResource("1_1wclm")
region = Rect2(0, 0, 32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_stfgs"]
atlas = ExtResource("1_1wclm")
region = Rect2(32, 0, 32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_urc88"]
atlas = ExtResource("1_1wclm")
region = Rect2(64, 0, 32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_1slt3"]
atlas = ExtResource("1_1wclm")
region = Rect2(96, 0, 32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3ycl"]
atlas = ExtResource("1_7oa5p")
region = Rect2(0, 0, 32, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnb8l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3nnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stfgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urc88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1slt3")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3ycl")
}],
"loop": true,
"name": &"stopped",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qepwn"]
size = Vector2(32, 5)

[sub_resource type="Animation" id="Animation_y6j5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_s5ku6"]
resource_name = "oscilate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ttjs"]
_data = {
"RESET": SubResource("Animation_y6j5r"),
"oscilate": SubResource("Animation_s5ku6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buf1u"]
size = Vector2(28, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v2spt"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 1, 1)
gravity = Vector3(0, 98, 0)

[node name="FlyingPlatform" type="Node2D" node_paths=PackedStringArray("gpu_particles_2d", "animation_player", "animated_sprite_2d", "fall_timer", "destroy_timer", "platform_collider")]
script = ExtResource("1_n2o6d")
gpu_particles_2d = NodePath("GPUParticles2D")
animation_player = NodePath("AnimationPlayer")
animated_sprite_2d = NodePath("AnimatedSprite2D")
fall_timer = NodePath("FallTimer")
destroy_timer = NodePath("DestroyTimer")
platform_collider = NodePath("AnimatableBody2D/CollisionShape2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wnb8l")
animation = &"idle"
autoplay = "idle"
frame = 3
frame_progress = 0.165674

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_qepwn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatableBody2D")
libraries = {
"": SubResource("AnimationLibrary_5ttjs")
}
autoplay = "oscilate"

[node name="DeactivateDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeactivateDetector"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_buf1u")
debug_color = Color(0.900286, 0.000169805, 0.763128, 0.42)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 5)
process_material = SubResource("ParticleProcessMaterial_v2spt")
collision_base_size = 0.0

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="DeactivateDetector" to="." method="_on_deactivate_detector_body_entered"]
[connection signal="body_entered" from="DeactivateDetector" to="AnimatableBody2D" method="_on_deactivate_detector_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="AnimatableBody2D" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="timeout" from="FallTimer" to="AnimatableBody2D" method="_on_fall_timer_timeout"]
[connection signal="timeout" from="FallTimer" to="AnimatableBody2D" method="_on_timer_timeout"]
